--- a/assets/index.html
+++ b/assets/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./js/app.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
